WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70204
REGRESSION (
r97525
): iChat transcript has horizontal scroll bar when the conversation includes a wide image
https://bugs.webkit.org/show_bug.cgi?id=70204
Summary
REGRESSION (r97525): iChat transcript has horizontal scroll bar when the conv...
mitz
Reported
2011-10-16 13:46:45 PDT
<
rdar://problem/10293929
> To reproduce: 1. In an iChat conversation, have someone send you an image that is wider than the chat window. —or— 1. In iChat, open a transcript of such a conversation. Result: The conversation/transcript window has a horizontal scroll bar, even though there is no visible content when scrolling to the right. This was caused by <
http://trac.webkit.org/r97525
>.
Attachments
Revert r97525
(6.99 KB, patch)
2011-10-17 10:55 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-10-16 13:50:20 PDT
Moreover, images resize abruptly and sometimes incorrectly as you make the window wider or narrower.
mitz
Comment 2
2011-10-16 13:50:53 PDT
Double-clicking an image in the transcript can also cause it to resize or recrop.
mitz
Comment 3
2011-10-17 10:55:10 PDT
Created
attachment 111283
[details]
Revert
r97525
WebKit Review Bot
Comment 4
2011-10-17 10:57:05 PDT
Attachment 111283
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource From git://git.webkit.org/WebKit dc6dc89..bc67541 master -> origin/master M Source/WebCore/WebCore.exp.in M Source/WebCore/ChangeLog M Source/WebKit2/UIProcess/WebProcessProxy.cpp M Source/WebKit2/ChangeLog M Tools/TestWebKitAPI/win/TestWebKitAPI.vcproj A Tools/TestWebKitAPI/Tests/WebKit2/LoadAlternateHTMLStringWithNonDirectoryURL.cpp M Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj M Tools/ChangeLog
r97633
= bc675418414f8c78f57fc869bfb1c38845010f5e (refs/remotes/trunk) First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/trunk. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 5
2011-10-17 11:19:56 PDT
Fixed in
r97635
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug